--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -13,12 +13,16 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-csv": "^2.2.2",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "reactstrap": "^9.2.2",
     "recharts": "^2.12.7",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "write-excel-file": "^2.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
